@@ -1,2 +1,3 @@
 DIST apertium-3.3.0.tar.gz 1100389 SHA256 9c2ff5b4f3cb99cd1b2f09c585fd86469ad32fb9d651ccd5c25c1848eca55a0d SHA512 832890109de25fc702911f57f5108820e24f89df7068c3def670c5cca1f20443fa7cee6b1fb2f204902febfceb38db9519be936c81a97afe64fbde677c6352d7 WHIRLPOOL cd5ae824d180dd2ce3d41e92c383e31975b1b08e8fde098799e10acbd05cc266647804d4e713fc518beb1b1b132c7b59bd3c3a7bd53025e69c99a5d92ccfce2e
 DIST apertium-3.4.0.tar.gz 1062996 SHA256 2bd7f44b794615ebca1c5d3949b2139b665e2a5af24c40931ea0856e268fc3da SHA512 11a2d5a946b1686d567f414d74d9e878081fc5c9c06fbc26b31049844825839deeef7569a1355c13412599ca7522952a77fd192738b7a65e533dfad361e9a3a0 WHIRLPOOL 0569a3b5a6263cb5f4a52e121d8ac7ff5652283b061e81d7f58c1fb17023c3f78eef5590ec9a5df91af008d36fcda3a082e10ad6d5432fd1bb36c288ce4018dc
+DIST apertium-3.4.2.tar.gz 1079545 SHA256 67b787c342cbd44d4bcafffdb5da3db265d4ce07003be21e73821c44102d7dd5 SHA512 3ac1f1c5e8b579c89e5ef30b990aee305733d4b96451f2619c5cb963e2374f142621730446c92f503162ea63cf05c33786129953878869872a891cb049203559 WHIRLPOOL 3e96cec945f05a5efca4512d32a9f3a2a86b084d8baef674bfde8fc3bfe318b382eba3cdec6a31abe08bf3ef9d67b69b9f78baeebd0d83739ff53402ef14188b
