@@ -1,6 +1,12 @@
 # ChangeLog for sci-misc/apertium
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*apertium-3.4.2 (31 Aug 2017)
+
+  31 Aug 2017; Flammie Pirinen <flammie@gentoo.org> +apertium-3.4.2.ebuild,
+  metadata.xml:
+  sci-misc/apertium: version bump
 
 *apertium-3.4.0 (03 Dec 2015)
 
